--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -153,9 +153,9 @@ html,body{
     z-index: 2;
     transition:.7s;
 }
-.is-sticky .header-area{
+/* .is-sticky .header-area{
 
-}
+} */
 .is-sticky .header-area:after{
     position:absolute;
     content:'';
@@ -186,7 +186,7 @@ html,body{
     padding: 10px 0 0 0;
 }
 .logo a span{
-    color: #00d8ff;
+    color: orangered;
     text-transform: capitalize;
 }
 
@@ -222,7 +222,7 @@ html,body{
 .main-menu  .nav  li.active a,
 .main-menu  .nav  li a:hover,
 .main-menu .nav  li a:focus{
-    color: #00d8ff;
+    color: orangered;
     background-color:transparent;
 }
 .main-menu .nav a:before{
@@ -242,7 +242,7 @@ html,body{
 }
 .main-menu .nav li.active  a:before,
 .main-menu .nav a:hover:before{
-    background: #00d8ff;
+    background: orangered;
     width: 100%;
 }
 
@@ -256,7 +256,7 @@ html,body{
     float:left;
 }
 .main-menu .navbar-toggle {
-    color: #00d8ff;
+    color: orangered;
 }
 .main-menu .navbar-default .navbar-toggle:focus, 
 .main-menu .navbar-default .navbar-toggle:hover {
@@ -270,8 +270,8 @@ html,body{
 
 /*book-btn*/
 .book-btn {
-	background: #00d8ff;
-    border: 1px solid #00d8ff;
+	background: orangered;
+    border: 1px solid orangered;
     width: 120px;
     height: 40px;
     white-space: nowrap;
@@ -304,7 +304,7 @@ html,body{
 	background: url(../../assets/images/home/travel.jpg)no-repeat;
 	background-size: cover;
 	background-position: center;
-	min-height: 1000px;
+	min-height: 450px;
 }
 .about-us:before{
 	position: absolute;
@@ -321,6 +321,33 @@ html,body{
 	margin: -175px 0 0 0;
 }
 
+.apropos-us{
+	display: flex;
+    justify-content: center;
+    align-items: center;
+	position: relative;
+    background: #3b5999;
+	/* background: url(../../assets/images/home/travel.jpg)no-repeat; */
+	background-size: cover;
+	background-position: center;
+	min-height: 450px;
+    border-end-end-radius: 15px;
+}
+.apropos-us:before{
+	position: absolute;
+	content: "";
+	top:0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,122,207,.4);
+}
+
+/*about-us-content*/
+.apropos-us-content{
+	margin: -175px 0 0 0;
+}
+
 .cards{ 
     margin: 50px;
     /* background: url(../../assets/images/home/home-about.jpg) no-repeat;
@@ -330,44 +357,37 @@ html,body{
    
     border-radius: 10px;
     box-shadow: 5em #222222;
-    border: 1px white solid;
+    
 }
-.card1{
+.card1, .apropos-card1{
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: start;
+    text-align: left;
     width: 500;
     height: 100;
     margin: 10px;
     max-width: 100%;
-    font-size: 30px;
-    color: wheat;
+    font-size: xx-large;
+    color: white;
     background-color: transparent;
 
 }
+
+.apropos-card1 h3{
+
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 100%;
+    color: orangered;
+}
 .logo-card{
     display: flex;
-    justify-content: start;
-    align-items: start;
-    background-color: aliceblue;
+    justify-content:right;
+    /* align-items: start; */
     width: 250px;
     font-size: x-large;
 }
 
-.logo-card  .and{
-    color:green;
-    font-size: 1em;
-}
-
-.logo-card  .magix{
-    color:orangered;
-    font-size: 1em;
-}
-.logo-card .travel, .service{
-    color:blue;
-    font-size: 1em;
-}
 .about-us h2 span{
 	color:#2bdab5;
 	margin-top: -11px;
@@ -385,8 +405,8 @@ html,body{
 	display: flex;
     justify-content: center;
     align-items: center;
-    background: #00d8ff;
-    border: 1px solid #00d8ff;
+    background: orangered;
+    border: 1px solid orangered;
     width: 200px;
     height: 60px;
     white-space: nowrap;
@@ -417,8 +437,9 @@ html,body{
 		4. 	Travel-box
 --------------------------------------*/
 .single-travel-boxes {
-    margin-top: -125px;
+    margin-top: -0.5px;
     background: #fff;
+    height: 800px;
 }
 .tab-para p {
     font-size: 24px;
@@ -435,7 +456,7 @@ html,body{
 
 .desc-tabs .nav-tabs>li.active>a{
 	color: #fff;
-    background: #00d8ff;
+    background: orangered;
     cursor: default;
     font-size: 20px;
     font-weight: 500;
@@ -454,7 +475,7 @@ html,body{
 }
 .desc-tabs .nav-tabs>li>a{
 	color: #fff;
-    background: #00d8ff;
+    background: orangered;
     cursor: default;
     font-size: 20px;
     font-weight: 500;
@@ -605,7 +626,7 @@ html,body{
 }
 
 .single-trip-circle input[type="radio"]:checked + label span.round-boarder1{
-     background-color:#00d8ff;
+     background-color:orangered;
 }
 
 .single-trip-circle input[type="radio"] + label span.round-boarder1,
@@ -641,8 +662,8 @@ html,body{
 	border-radius: 5px;
 }
 .price_filter .ui-slider-handle.ui-state-default.ui-corner-all {
-    background: #00d8ff none repeat scroll 0 0;
-    border: 0px solid #00d8ff;
+    background: orangered none repeat scroll 0 0;
+    border: 0px solid orangered;
     border-radius:50%;
     height: 12px;
     width: 12px;
@@ -650,7 +671,7 @@ html,body{
     cursor: pointer;
     z-index: 1;
 }
-.price_filter .ui-slider-range {background: #00d8ff none repeat scroll 0 0;}
+.price_filter .ui-slider-range {background: orangered none repeat scroll 0 0;}
 .price_slider_amount > input[type="text"] {
     font-weight: 500;
     font-size: 14px;
@@ -971,7 +992,7 @@ html,body{
     text-transform: capitalize;
 }
 .about-view.packages-btn{
-    width: 110px;
+    width: 150px;
     height: 35px;
     font-size: 14px;
     color: #fff;
@@ -1047,7 +1068,7 @@ html,body{
     background: #aaa; 
 }
 .testemonial .owl-theme .owl-dots .owl-dot.active span{
-    background: #00d8ff;
+    background: orangered;
 }/*owl-carousel*/
 
 /*home1-testm-txt*/
@@ -1064,7 +1085,7 @@ html,body{
 }
 .home1-testm-txt h3 a{
     display: block;
-    color: #00d8ff;
+    color: orangered;
     font-size: 16px;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
@@ -1121,7 +1142,7 @@ html,body{
     z-index: 1;
 }
 .single-special-offer-bg img {
-    height: 807px;
+    height: 450px;
 }
 
 .single-special-shape-txt {
@@ -1383,7 +1404,7 @@ html,body{
 
 /*appsLand-btn*/
 .appsLand-btn {
-    background: #00d8ff;
+    background: orangered;
     display: inline-block;
     padding: 17px 54px;
     text-decoration: none;
@@ -1412,7 +1433,7 @@ html,body{
 }
 .appsLand-btn:hover {
     box-shadow: 0 3px 25px rgba(2, 3, 3, 0.25);
-    background: #00d8ff;
+    background: orangered;
 }
 
 .appsLand-btn.appsLand-btn-larg {
@@ -1462,7 +1483,7 @@ html,body{
     padding: 10px 0 0 0;
 }
 .footer-logo a>span {
-    color: #00d8ff;
+    color: orangered;
     text-transform: capitalize;
 } 
 .footer-logo p{
@@ -1493,8 +1514,10 @@ html,body{
     -ms-transition:scaleX(1.2);
     -o-transition:scaleX(1.2);
     transform:scaleX(1.2);
-    color: #00d8ff;
-}/*single-footer-txt*/
+    color: orangered;
+}
+
+/*single-footer-txt*/
 
 .footer-copyright hr{
     border-top: 1px solid #ebebeb;
@@ -1554,7 +1577,7 @@ html,body{
     margin-top:28px;
 }
 .foot-icons p a,.foot-icons p a:hover,.foot-icons p a:focus{
-    color:#00d8ff;
+    color:orangered;
     font-size:16px;
     margin-top:28px;
 }/*foot-icons*/
@@ -1576,8 +1599,8 @@ html,body{
     cursor: pointer;
     z-index:15;
     color: #fff;
-    background:#00d8ff;
-	border:1px solid #00d8ff;
+    background:orangered;
+	border:1px solid orangered;
 	border-radius:5px;
 	-webkit-transition: .5s; 
 	-moz-transition:.5s; 
@@ -1589,7 +1612,7 @@ html,body{
 }
 
 #scroll-Top  .return-to-top:hover {
-    background:#2cdbb5;
+    background:blue;
     color: #fff;
 	border-radius:50%;
 
