--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -327,8 +327,7 @@ html,body{
     justify-content: center;
     align-items: center;
 	position: relative;
-    background: #3e1bda;
-	/* background: url(../../assets/images/home/travel.jpg)no-repeat; */
+	background: url(../../assets/images/blog/image1.jpeg)no-repeat;
 	background-size: cover;
 	background-position: center;
 	min-height: 450px;
@@ -341,7 +340,7 @@ html,body{
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0,122,207,.4);
+	/* background: rgba(0,122,207,.4); */
 }
 
 /*about-us-content*/
@@ -351,8 +350,7 @@ html,body{
 
 .cards{ 
     margin: 50px;
-    /* background: url(../../assets/images/home/home-about.jpg) no-repeat;
-    background-size:400px 300px; */
+    background-size:400px 300px; 
     width: 500;
     height: 500;
    
@@ -379,7 +377,7 @@ html,body{
 
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 100%;
-    color: orangered;
+    color: #fff;
 }
 /*==== for service ======*/
 
@@ -388,8 +386,34 @@ html,body{
     justify-content: center;
     align-items: center;
 	position: relative;
+    background: #12089c;
+	/* background: url(../../assets/images/blog/image3.jpg)no-repeat; */
+	background-size: cover;
+	background-position: center;
+	min-height: 450px;
+    border-end-end-radius: 15px;
+}
+
+.service-menu{
+	display: flex;
+    justify-content: center;
+    align-items: center;
+	position: relative;
     background: #fff;
-	/* background: url(../../assets/images/home/travel.jpg)no-repeat; */
+	background: url(../../assets/images/blog/image2.jpeg)no-repeat;
+	background-size: cover;
+	background-position: center;
+	min-height: 450px;
+    border-end-end-radius: 15px;
+}
+
+.contact{
+	display: flex;
+    justify-content: center;
+    align-items: center;
+	position: relative;
+    background: #fff;
+	background: url(../../assets/images/blog/image3.jpg)no-repeat;
 	background-size: cover;
 	background-position: center;
 	min-height: 450px;
@@ -1467,10 +1491,10 @@ html,body{
 --------------------------------------*/
 .footer-copyright{
     background:#3e1bda;
-    padding: 0 0 60px;
+    padding: 0 0 20px;
 }
 .footer-content{
-    padding:6px 0;
+    padding:2px 0;
 }
 
 /*single-footer-item*/
@@ -1641,3 +1665,184 @@ html,body{
 
 
 /*========================Thank you=================*/
+
+/* ============cards ================================= */
+:root {
+    --purple: hsl(240, 80%, 89%);
+    --pink: hsl(0, 59%, 94%);
+    --light-bg: hsl(204, 37%, 92%);
+    --light-gray-bg: hsl(0, 0%, 94%);
+    --white: hsl(0, 0%, 100%);
+    --dark: hsl(0, 0%, 7%);
+    --text-gray: hsl(0, 0%, 30%);
+  }
+  
+  h3 {
+    font-size: 1.5em;
+    font-weight: 700;
+  }
+  
+  p {
+    font-size: 1em;
+    line-height: 1.7;
+    font-weight: 300;
+    color: var(--text-gray);
+  }
+  
+  .description {
+    white-space: wrap;
+  }
+  
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+  
+  .wrap {
+    display: flex;
+    justify: space-between;
+    align-items: stretch;
+    width: 100%;
+    gap: 24px;
+    padding: 24px;
+    flex-wrap: wrap;
+  }
+  
+  .box {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    position: relative;
+    padding: 24px;
+    background: #fff;
+  }
+  
+  .box-top {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    gap: 12px;
+    margin-bottom: 36px;
+  }
+  
+  .box-image {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    object-position: 50% 20%;
+  }
+  
+  .title-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .box-title {
+    border-left: 3px solid var(--purple);
+    padding-left: 12px;
+  }
+  
+  .user-follow-info {
+    color: hsl(0, 0%, 60%);
+  }
+  
+  .button {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: auto;
+    padding: 16px;
+    color: #000;
+    background: transparent;
+    box-shadow: 0px 0px 0px 1px black inset;
+    transition: background 0.4s ease;
+  }
+  
+  .button:hover {
+    background: var(--purple);
+  }
+  
+  .fill-one {
+    background: var(--light-bg);
+  }
+  
+  .fill-two {
+    background: var(--pink);
+  }
+  
+  /* RESPONSIVE QUERIES */
+  
+  @media (min-width: 320px) {
+    .title-flex {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: start;
+    }
+    .user-follow-info {
+      margin-top: 6px;
+    }
+  }
+  
+  @media (min-width: 460px) {
+    .title-flex {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: start;
+    }
+    .user-follow-info {
+      margin-top: 6px;
+    }
+  }
+  
+  @media (min-width: 640px) {
+    .box {
+      flex-basis: calc(50% - 12px);
+    }
+    .title-flex {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: start;
+    }
+    .user-follow-info {
+      margin-top: 6px;
+    }
+  }
+  
+  @media (min-width: 840px) {
+    .title-flex {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: start;
+    }
+    .user-follow-info {
+      margin-top: 6px;
+    }
+  }
+  
+  @media (min-width: 1024px) {
+    .box {
+      flex-basis: calc(33.3% - 16px);
+    }
+    .title-flex {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: start;
+    }
+    .user-follow-info {
+      margin-top: 6px;
+    }
+  }
+  
+  @media (min-width: 1100px) {
+    .box {
+      flex-basis: calc(25% - 18px);
+    }
+  }
+  
