--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -964,6 +964,7 @@ html,body{
 }
 .single-package-item img {
     width: 100%;
+    height: 240px;
 }
 .single-package-item h3{
     position: relative;
